fixtures/semantic/invalid/06-vr-sl1-r3-slot-collisions.fl
component SlotCollisions(
  prop title: text
) {
  surface {
    slot title: text
    slot title: text
  }
}
